--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -106,7 +106,7 @@ layout: page
   <li class="page-item previous">
     <a class="page-link" href="{{ paginator.previous_page_path | absolute_url }}">
       <i class="fas fa-arrow-left" alt="Newer Posts"></i>
-      <span class="d-none d-sm-inline-block">Sonraki Yazı Posts</span>
+      <span class="d-none d-sm-inline-block">Sonraki Yazı</span>
     </a>
   </li>
   {% endif %}
