--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -32,7 +32,7 @@
       {%- endfor -%}
       {% if site.post_search %}
         <li class="nav-item">
-          <a class="nav-link" id="nav-search-link" href="#" title="Search">
+          <a class="nav-link" id="nav-search-link" href="#" title="Arama">
             <span id="nav-search-icon" class="fa fa-search"></span>
             <span id="nav-search-text">Arama</span>
           </a>
