--- a/_includes/search.html
+++ b/_includes/search.html
@@ -2,7 +2,7 @@
 
 <div id="beautifuljekyll-search-overlay">
 
-  <div id="nav-search-exit" title="Exit search">✕</div>
+  <div id="nav-search-exit" title="Aramadan Çık">✕</div>
   <input type="text" id="nav-search-input" placeholder="Search">
   <ul id="search-results-container"></ul>
   
