--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -565,7 +565,7 @@ footer .footer-custom-content {
 /* --- Post preview (feed) --- */
 /* Genel Stil Ayarları */
 body {
-  background-color: #e1e1e1; /* Arka plan rengi */
+  background-color: #1E1E1E;
   font-family: sans-serif;
   color: #333;
   margin: 0;
