--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -565,9 +565,7 @@ footer .footer-custom-content {
 /* --- Post preview (feed) --- */
 /* Genel Stil Ayarları */
 body {
-  background-color: #1E1E1E;
   font-family: sans-serif;
-  color: #333;
   margin: 0;
   padding: 0;
 }
@@ -622,6 +620,17 @@ body {
 .post-heading .post-meta {
   display: inline-block;
 }
+.post-preview .post-image {
+  display: block;
+  filter: none;
+  transition: filter 0.3s ease;
+}
+.post-preview .post-image-small {
+  display: none;
+}
+.post-preview .post-image:hover {
+  filter: grayscale(40%);
+}
 
 /* Mobil Stil (max-width: 768px) */
 @media (max-width: 768px) {
@@ -663,7 +672,6 @@ body {
   .post-preview .post-image img {
     max-width: 100%;
     max-height: 100%;
-    object-fit: cover;
   }
 
   /* Daha Fazla Oku Butonu */
@@ -679,6 +687,10 @@ body {
 /* Ekstra Küçük Ekranlar (max-width: 500px) */
 @media (max-width: 500px) {
   .post-preview .post-image {
+    display: none;
+  }
+  .post-preview .post-image-small {
+    display: block;
     max-width: 200px;
   }
 }
