--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -296,6 +296,14 @@ img {
         max-width: 90% !important; /* Dar ekranlarda düzgün hizalama */
         margin: 0 auto !important;
     }
+    .page-subheading {
+      font-size: 1.2rem; /* Yazı boyutunu hafif küçültür, ihtiyaca göre ayarlanabilir */
+      display: inline-block; /* Yazı etrafında arka plan oluşturmak için */
+      background-color: #ddd; /* Gri tonlu arka plan; isterseniz farklı bir ton kullanabilirsiniz */
+      padding: 0.3em 0.6em; /* Yazının etrafında boşluk bırakarak plate etkisi yaratır */
+      border-radius: 4px; /* Köşeleri yuvarlayarak daha yumuşak bir görünüm kazandırır */
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* İsteğe bağlı: hafif gölge efekti ekler */
+    }
 
     .site-logo {
         max-width: 60px; /* Logo boyutunu küçült */
