--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -1,7 +1,7 @@
 ---
 layout: null
 ---
-
+@import url('https://fonts.googleapis.com/css?family=Dancing+Script:400,700&display=swap');
 @import url("pygment_highlights.css");
 
 :root {
