--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -149,6 +149,22 @@ img {
   }
 }
 
+
+@media (min-width: 992px) {
+  body::before {
+    content: "";
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 100%;
+    background: linear-gradient(#1E1E1E, #111); 
+    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 75%);
+    /* Yukarıdaki clip-path ile basit bir diyagonal şekil elde edebilirsiniz */
+    z-index: -1; /* İçerik üstte kalsın */
+  }
+}
+
 /* --- Navbar --- */
 
 .navbar-custom {
